--- a/Pylith/calc_gfs.cfg
+++ b/Pylith/calc_gfs.cfg
@@ -33,7 +33,7 @@
 # Parameter files:
 #   - pylithapp.cfg (common paramters, read by default)
 #   - greensfns.cfg (greensfns paramters, read by default)
-#   - step07a.cfg (main parameter file for step07a)
+#   - calc_gfs.cfg (main parameter file for step07a)
 #   - mat_elastic.cfg (material models and parameters)
 #   - solver_fieldsplit.cfg (field split solver settings)
 #
@@ -43,7 +43,10 @@
 # simulations, so we put them in a separate file.
 #
 # TO RUN THE SIMULATION:
-#   pylith --problem=pylith.problems.GreensFns step07a.cfg mat_elastic.cfg solver_fieldsplit.cfg 
+#   pylith --problem=pylith.problems.GreensFns calc_gfs.cfg mat_elastic.cfg solver_fieldsplit.cfg --nodes=30
+#   or
+#   pylith --problem=pylith.problems.GreensFns calc_gfs.cfg mat_elastic.cfg solver_fieldsplit.cfg 
+# dependent on the MPI implementation
 #
 # Output will be directed to the "output" directory..
 
